fixes iframe over width on small screen

--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -41,6 +41,8 @@ blockquote
   font-style: italic
   padding: 1em
   border-left: 0.1em solid currentColor
+iframe
+  max-width: 100%
 
 // ==========================================================================
 // Mixins
